--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-multi-carousel": "^2.6.5",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
