--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "format-currency": "^1.0.0",
     "framer-motion": "^4.1.17",
     "immer": "^9.0.6",
     "react": "^17.0.2",
