--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.0",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "framer-motion": "^4.1.17",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
+    "react-click-outside-hook": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.3",
     "sweetalert2": "^11.1.9",
     "web-vitals": "^1.0.1"
   },
@@ -43,6 +52,7 @@
   },
   "devDependencies": {
     "autoprefixer": "9",
+    "dotenv": "^10.0.0",
     "postcss": "7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
